# SpkVer_iVector

./: .gitignore  CMakeLists.txt  README.md  SpkVer_iVector  main.cpp  setup
doc/: doxyconfig.cfg
examples/: config.cfg  data.cfg  workspace.cfg
include/: Log4AVA.h  config-fileparser.h  createworkspace.h  enrollFRRFAR.h  filelists.h  funhelpers.h  mainwindow.h  mfccefeatures.h  mfccextractor.h  progressbar.h  timeheleprs.h  trainTVPMiVector.h  unittests.h
models/17-11-2025_10h23m7s_gmm128_TV200/: V.csv  W.csv  lam.csv  mu.csv  normStd.csv  projectionMatrix.csv
models/17-11-2025_9h54m50s_gmm128_TV100/: V.csv  W.csv  lam.csv  mu.csv  normMean.csv  projectionMatrix.csv  ubmModel.gmm  ubmMu.csv
py/: graph-error.py
src/: Log4AVA.cpp  Log4AVA.h  config-fileparser.cpp  createworkspace.cpp  enrollFRRFAR.cpp  filelists.cpp  funhelpers.cpp  funhelpers.h  gpldamodel.cpp  gpldamodel.h  main.cpp  mainwindow.cpp  mfccefeatures.cpp  mfccextractor.cpp  old-main.cpp  old-mainwindow.cpp  timehelpers.cpp  trainTVPMiVector.cpp  trainTVPMiVector.h  unittests.cpp
